<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/order_details"
            android:textSize="25sp"
            android:textColor="@color/color_black"
            android:textStyle="bold"
            android:id="@+id/_EditDialogTitle" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:background="@drawable/edit_2"
            android:id="@+id/windowClose_Edit"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:layout_below="@+id/text_terms_Patient"
        android:background="@color/colorPrimary"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:id="@+id/imageUpload"
                android:background="@drawable/add_image"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/colorAccent"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:editable="false"
                android:id="@+id/_ProductId"
                android:hint="@string/product_id"
                android:layout_gravity="center_horizontal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:inputType="number"
                android:id="@+id/_ProductName"
                android:hint="@string/product_name"
                android:layout_gravity="center_horizontal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:inputType="number"
                android:id="@+id/_ProductType"
                android:hint="@string/product_type"
                android:layout_gravity="center_horizontal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:inputType="number"
                android:id="@+id/_ProductQuantity"
                android:hint="@string/product_quantity"
                android:layout_gravity="center_horizontal" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/submit"
            android:textColor="@color/color_white"
            android:background="@drawable/roundedconerbutton"
            android:id="@+id/done_Edit"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
</LinearLayout>

