<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/appback"
    tools:context="com.techflux.oyebhangarwalaagent.activity.LoginActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/activity_margin"
        android:id="@+id/relativeLayout2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:textColor="@color/color_black"
            android:textSize="25sp"
            android:layout_alignParentStart="true"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_Top_margin"/>/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout2">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/layout_border"
        android:id="@+id/linearLayout"
        android:alpha="0.75"
        >

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:id="@+id/et_login_username"
            android:hint="@string/email"
            android:textColorHint="@color/color_grey"
            android:background="@null"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/color_black"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:inputType="textPassword"
            android:id="@+id/et_login_password"
            android:hint="@string/password"
            android:textColorHint="@color/color_grey"
            android:background="@null"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layoutForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="10dp">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rememberme"
            android:textColor="@color/colorPrimaryDark"
            android:layout_alignParentStart="true"
            android:id="@+id/checkBox_remember" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginRight="7dp"
            android:text="@string/forgotpassword"
            android:textColor="@color/colorPrimaryDark"
            android:layout_alignParentEnd="true"
            android:id="@+id/tv_forgot_password" />
    </RelativeLayout>
    </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dip"
            android:layout_marginRight="60dip"
            android:text="@string/signin"
            android:id="@+id/btn_login"
            android:textColor="@color/color_white"
            android:background="@color/color_blue"
            android:layout_below="@+id/linearLayout2"
            android:layout_centerHorizontal="true" />
</RelativeLayout>
